--- a/tsconfig.build.json
+++ b/tsconfig.build.json
@@ -2,7 +2,8 @@
   "extends": "./tsconfig.json",
   "compilerOptions": {
     "module": "commonjs",
-    "moduleResolution": "node"
+    "moduleResolution": "node",
+    "resolvePackageJsonExports": false
   },
   "include": ["src/**/*", "data-source.ts"],
   "exclude": ["node_modules", "test", "dist", "**/*spec.ts"]
