--- a/.env.example
+++ b/.env.example
@@ -1,9 +1,15 @@
 DATABASE_HOST=
-DATABASE_PORT=5432
+DATABASE_PORT=
 DATABASE_USER=
 DATABASE_PASSWORD=
 DATABASE_NAME=
-PORT=3001
+PORT=
 FRONTEND_URL=
-BACKEND_URL=
-NODE_ENV=development
+NODE_ENV=
+AWS_ACCESS_KEY_ID=
+AWS_SECRET_ACCESS_KEY=
+AWS_REGION=
+PROJECT_ID=
+AWS_S3_ENDPOINT=
+AWS_S3_BUCKET=
+
